--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": ">=7.0.0",
         "algolia/algoliasearch-client-php": "1.23.1",
         "fideloper/proxy": "~3.3",
+        "laravel/cashier": "=7.0",
         "laravel/framework": "5.5.*",
         "laravel/scout": "3.0.12",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "pusher/pusher-php-server": "3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
