--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "laravel-echo": "^1.8.1",
+        "pusher-js": "^7.0.0",
         "vue-instantsearch": "^1.3.2"
     }
 }
